// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Public API Surface — @tutors/tutors-time-lib > should export service classes and types 1`] = `
[
  "getSupabase",
  "initSupabase",
  "readerTimeSource",
  "supabaseTimeSource",
  "setTutorsTimeSource",
  "getTutorsTimeSource",
  "TutorsTimeSourceError",
  "BaseCalendarModel",
  "BaseLabModel",
  "CourseTime",
  "filterByDateRange",
  "getDistinctSortedDates",
  "formatDateShort",
  "formatTimeNearestMinute",
  "formatTimeMinutesOnly",
  "cellColorForMinutes",
  "getMondayForDate",
  "getDistinctSortedWeeks",
  "extractLabIdentifier",
  "extractStepName",
  "getDistinctSortedDatesFromRecords",
  "toggleLabViewMode",
]
`;

exports[`Public API Surface — @tutors/tutors-time-lib > should maintain stable export names 1`] = `
[
  "BaseCalendarModel",
  "BaseLabModel",
  "CourseTime",
  "TutorsTime",
  "TutorsTimeSourceError",
  "cellColorForMinutes",
  "extractLabIdentifier",
  "extractStepName",
  "filterByDateRange",
  "formatDateShort",
  "formatTimeMinutesOnly",
  "formatTimeNearestMinute",
  "getDistinctSortedDates",
  "getDistinctSortedDatesFromRecords",
  "getDistinctSortedWeeks",
  "getMondayForDate",
  "getSupabase",
  "getTutorsTimeSource",
  "initSupabase",
  "readerTimeSource",
  "setTutorsTimeSource",
  "supabaseTimeSource",
  "toggleLabViewMode",
]
`;
